--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
             <button type="button" class="nav-button" onclick="confirmarAsistencia()">
                 <i class="fas fa-paper-plane"></i> Confirmar
             </button>
+            <button type="button" class="nav-button decline-button" onclick="declinarAsistencia()">
+                <i class="fas fa-times"></i> No podré asistir
+            </button>
         </form>
         <div id="formMessage" class="form-message"></div>
     </div>
