--- a/index.html
+++ b/index.html
@@ -99,6 +99,10 @@
         * Los tonos verdes en todas sus variaciones están reservados exclusivamente para la cumpleañera
         </em>
     </p>
+        <p class="recommended-color-text animate">Color de vestimenta recomendada</p>
+
+
+       
     <div class="color-palette">
         <div class="color-box" style="background: var(--taupe)"></div>
         <div class="color-box" style="background: var(--beige)"></div>
