--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         <div class="floral-border"></div>
         <div class="content">
             <h1>Mis XV Años</h1>
-            <h2>Ximena lopez Vallecillo</h2>
+            <h2>Ximena López Vallecillo</h2>
             <p>15 de Marzo 2025</p>
         </div>
     </section>
